[tool.poetry]
name = "riskforge-financial-risk-guardian"
version = "0.1.0"
description = "AI-powered financial risk analysis platform with graph intelligence and NVIDIA GPU acceleration"
authors = ["Your Name <your_email@example.com>"]
readme = "README.md"
packages = [{ include = "risk_guardian", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.0"
flake8 = "^7.0"
isort = "^5.13"
mypy = "^1.8"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
